# elos-plugins

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
ci/: build.sh  clean.sh  common_names.sh  dependencies_default.json  dependencies_emlix.json  install_deps.py  run_smoketests.sh
clients/: CMakeLists.txt
clients/dummy/: CMakeLists.txt  README.md
clients/dummy/private/: dummy.c
cmake/: project.cmake
storagebackends/: CMakeLists.txt
storagebackends/dummy/: CMakeLists.txt  README.md
storagebackends/dummy/private/: dummyBackend.c
storagebackends/ring_buffer/: CMakeLists.txt  README.md
storagebackends/ring_buffer/private/: EventBuffer.cpp  ringBufferBackend.cpp
storagebackends/ring_buffer/public/: EventBuffer.h
test/smoketest/: README.md  config.json  smoketest.sh  smoketest_env.sh
